--- a/Creatiwise/index.html
+++ b/Creatiwise/index.html
@@ -559,6 +559,9 @@
                     items: 1
                 },
                 600: {
+                    items: 2
+                },
+                768: {
                     items: 3
                 },
                 1000: {
