--- a/Creatiwise/product.html
+++ b/Creatiwise/product.html
@@ -74,11 +74,71 @@
             <div class="col-lg-3 px-5 d-lg-flex justify-content-lg-between align-items-lg-center text-dark gap-4">
 
                 <div class="h-100 d-inline-flex align-items-center position-relative">
-                    <a href="#" class="me-3"><img src="img/shopping-cart.png" alt="shopping cart" width="20px"
+                    <a href="#" class="me-3 cart"><img src="img/shopping-cart.png" alt="shopping cart" width="20px"
                             style="object-fit: cover;"></a>
                     <small>$254.46</small>
                     <small class="position-absolute text-white text-center"
                         style="background: #FF3E41; width: 17px; height: 17px; top: 0; font-size: 0.65rem; border-radius: 100%; left: 11px; line-height: 17px;">12</small>
+                </div>
+                <div class="dropdown">
+                    <ul class="dropdown-menu cart-list s-cate"
+                        style="display: none; opacity: 0; top: 20px; right: -25px;">
+                        <li class="single-cart-list">
+                            <a href="#" class="photo"><img src="img/coconut-butter.jpeg" class="cart-thumb"
+                                    alt="image" /></a>
+                            <div class="cart-list-txt">
+                                <h6><a href="#">Product Name</a></h6>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <p class="text-center text-white"
+                                        style="line-height: 16px; width: 18px; height: 18px; border-radius: 10px; background-color: #9c9998;">
+                                        –</p>
+                                    <p style="font-size: 12px;">02</p>
+                                    <p class="text-center text-white"
+                                        style="line-height: 16px; width: 18px; height: 18px; border-radius: 10px; background-color: #f26522;">
+                                        +</p>
+                                </div>
+                            </div>
+                            <span class="price">$45.95</span>
+                        </li>
+                        <li class="single-cart-list">
+                            <a href="#" class="photo"><img src="img/chocolate-jar.png" class="cart-thumb"
+                                    alt="image" /></a>
+                            <div class="cart-list-txt">
+                                <h6><a href="#">Product Name</a></h6>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <p class="text-center text-white"
+                                        style="line-height: 16px; width: 18px; height: 18px; border-radius: 10px; background-color: #9c9998;">
+                                        –</p>
+                                    <p style="font-size: 12px;">02</p>
+                                    <p class="text-center text-white"
+                                        style="line-height: 16px; width: 18px; height: 18px; border-radius: 10px; background-color: #f26522;">
+                                        +</p>
+                                </div>
+                            </div>
+                            <span class="price">$45.95</span>
+                        </li>
+                        <li class="single-cart-list">
+                            <a href="#" class="photo"><img src="img/tea-tree.jpeg" class="cart-thumb" alt="image" /></a>
+                            <div class="cart-list-txt">
+                                <h6><a href="#">Product Name</a></h6>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <p class="text-center text-white"
+                                        style="line-height: 16px; width: 18px; height: 18px; border-radius: 10px; background-color: #9c9998;">
+                                        –</p>
+                                    <p style="font-size: 12px;">02</p>
+                                    <p class="text-center text-white"
+                                        style="line-height: 16px; width: 18px; height: 18px; border-radius: 10px; background-color: #f26522;">
+                                        +</p>
+                                </div>
+                            </div>
+                            <span class="price">$45.95</span>
+                        </li>
+
+                        <li class="total text-center">
+                            <button class="btn bg-warning btn-cart">CONTINUE</button>
+                        </li>
+                    </ul>
+
                 </div>
                 
                 <div class="h-100 d-inline-flex">
@@ -314,7 +374,7 @@
                         <div class="product-item d-flex justify-content-center border py-2">
                             <div class="py-3">
                                 <div class="d-flex align-items-end mb-4">
-                                    <img class="img-fluid flex-shrink-0" src="img/coconut-butter.jpg"
+                                    <img class="img-fluid flex-shrink-0" src="img/coconut-butter.jpeg"
                                         style="width: 130px; height: 130px;">
                                 </div>
                                 <p class="text-center mb-0">Product Name</p>
@@ -365,7 +425,7 @@
                         <div class="product-item d-flex justify-content-center border py-2">
                             <div class="py-3">
                                 <div class="d-flex align-items-end mb-4">
-                                    <img class="img-fluid flex-shrink-0" src="img/coconut-butter.jpg"
+                                    <img class="img-fluid flex-shrink-0" src="img/coconut-butter.jpeg"
                                         style="width: 130px; height: 130px;">
                                 </div>
                                 <p class="text-center mb-0">Product Name</p>
@@ -453,7 +513,7 @@
                         <div class="product-item d-flex justify-content-center border py-2">
                             <div class="py-3">
                                 <div class="d-flex align-items-end mb-4">
-                                    <img class="img-fluid flex-shrink-0" src="img/coconut-butter.jpg"
+                                    <img class="img-fluid flex-shrink-0" src="img/coconut-butter.jpeg"
                                         style="width: 130px; height: 130px;">
                                 </div>
                                 <p class="text-center mb-0">Product Name</p>
@@ -504,7 +564,7 @@
                         <div class="product-item d-flex justify-content-center border py-2">
                             <div class="py-3">
                                 <div class="d-flex align-items-end mb-4">
-                                    <img class="img-fluid flex-shrink-0" src="img/coconut-butter.jpg"
+                                    <img class="img-fluid flex-shrink-0" src="img/coconut-butter.jpeg"
                                         style="width: 130px; height: 130px;">
                                 </div>
                                 <p class="text-center mb-0">Product Name</p>
@@ -694,6 +754,8 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+     <!-- Javascript File-->
+     <script src="js/main.js"></script>
 </body>
 
 </html>
